--- a/src/components/templates/MethodLandingTemplate/sections/BenefitsTiles/styles.module.scss
+++ b/src/components/templates/MethodLandingTemplate/sections/BenefitsTiles/styles.module.scss
@@ -1,10 +1,12 @@
 .wrapper {
   --tiles-accent: var(--method-pdw-primary);
+  --tiles-accent-dark: var(--method-pdw-dark);
   --tiles-accent-light: var(--method-pdw-light);
 }
 
 .themePdr {
   --tiles-accent: var(--method-pdr-primary);
+  --tiles-accent-dark: var(--method-pdr-dark);
   --tiles-accent-light: var(--method-pdr-light);
 }
 
@@ -144,7 +146,7 @@
 
   em {
     font-style: normal;
-    color: var(--tiles-accent);
+    color: var(--tiles-accent-dark);
   }
 }
 
