--- a/src/components/templates/MethodLandingTemplate/sections/FeaturesGrid/styles.module.scss
+++ b/src/components/templates/MethodLandingTemplate/sections/FeaturesGrid/styles.module.scss
@@ -1,9 +1,11 @@
 .wrapper {
   --features-accent: var(--method-pdw-primary);
+  --features-accent-dark: var(--method-pdw-dark);
   --features-accent-light: var(--method-pdw-light);
 
   &.pdr {
     --features-accent: var(--method-pdr-primary);
+    --features-accent-dark: var(--method-pdr-dark);
     --features-accent-light: var(--method-pdr-light);
   }
 
@@ -75,7 +77,7 @@
 
   em {
     font-style: normal;
-    color: var(--features-accent);
+    color: var(--features-accent-dark);
     font-weight: 600;
   }
 }
